--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/index.jsx"></script>
+  <script type="module" src="/src/index.jsx">
+    import { Buffer } from "buffer";
+    window.Buffer = Buffer;
+  </script>
 </body>
 </html>
