--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/index.jsx">
-    import { Buffer } from "buffer";
-    window.Buffer = Buffer;
-  </script>
+  <script type="module" src="/src/index.jsx"></script>
 </body>
 </html>
